--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.3.2
 Flask_Cors==4.0.0
-matplotlib==3.7.2
-mysql_connector_repackaged==0.3.1
-networkx==3.1
 openai==0.28.1
-pandas==2.0.3
-PyPDF2==3.0.1
+Flask-Session==0.5.0
+mysql-connector-python==8.2.0
+mysql-connector-repackaged==0.3.1
+
+
